--- a/_sass/components/_switch.scss
+++ b/_sass/components/_switch.scss
@@ -29,7 +29,7 @@
         font-size: var(--nds-text-md-FS);
         line-height: calc(var(--nds-input-size) + 4px);
         font-weight: 500;
-        height: calc(var(--nds-input-size) + 4px);
+        /* height: calc(var(--nds-input-size) + 4px); */
     }
 
     // Size variants
